--- a/package.json
+++ b/package.json
@@ -14,24 +14,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "format": "prettier --single-quote --write \"src/**/*.js\"",
-    "precommit": "lint-staged"
-  },
-  "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "husky": "^0.14.3",
-    "lint-staged": "^4.0.2",
-    "prettier": "^1.5.3",
-    "standard": "^10.0.2"
-  },
-  "lint-staged": {
-    "*.js": [
-      "prettier --write --single-quote",
-      "git add"
-    ]
-  },
-  "standard": {
-    "parser": "babel-eslint"
+    "eject": "react-scripts eject"
   }
 }
