--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,11 @@
 {
-  "extends": "react-app"
+  "parser": "babel-eslint",
+  "rules": {
+    "strict": 0,
+    "no-undef ": "off",
+    "react/prefer-stateless-function": 0,
+    "jsx-a11y/image-has-alt": 0,
+    "prefer-template": 0,
+    "react/no-did-mount-set-state": 0
+  }
 }
